fileextractor (1.0.4-0ubuntu1) karmic; urgency=low

  * Proper config file management
  * Distributed all resources (icons, help files, etc) in corresponding locations in Linux file system
  * Got rid of this stupid base dir thing, where execution depends on directory of installation 

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 13 Feb 2010 12:17:39 +0100

fileextractor (1.0.3-0ubuntu1) karmic; urgency=low

  * Some fixes due to larger focus on Linux release

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 06 Feb 2010 16:17:45 +0100

fileextractor (1.0.2-0ubuntu3) karmic; urgency=low

  * Fixed base dir problem in wizard gui

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 06 Feb 2010 15:23:01 +0100

fileextractor (1.0.2-0ubuntu2) karmic; urgency=low

  * Bug fixing build: folder new icons was missing

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 06 Feb 2010 15:01:46 +0100

fileextractor (1.0.2-0ubuntu1) karmic; urgency=low

  * Bug fixing: Config file location and handling as well as finding resources (help, icons) in the file system 

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 06 Feb 2010 14:39:41 +0100

fileextractor (1.0.1-0ubuntu1) karmic; urgency=low

  * Minor bug fixing

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 06 Feb 2010 12:46:22 +0100

fileextractor (1.0-0ubuntu4) karmic; urgency=low

  * Initial release of FileExtractor

 -- Michael Pilgermann <kichkasch@gmx.de>  Sat, 06 Feb 2010 12:26:59 +0100